<resources>
    <string name="app_name">WorkFuel</string>
    <string name="text_hello">Добро пожаловать</string>
    <string name="text_login">Войти</string>
    <string name="login_underline"><u>Войти</u></string>
    <string name="text_login_title">Войдите в аккаунт</string>
    <string name="no_account">Еще нет аккаунта?</string>
    <string name="create">Создать</string>
    <string name="create_underline"><u>Создать</u></string>
    <string name="nickname">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="create_account">Создать aккаунт</string>
    <string name="text_registration">Зарегистрироваться</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="text_email">Почта</string>
    <string name="account">Аккаунт</string>
    <string name="basket">Корзина</string>
    <string name="menu">Меню</string>
    <string name="popular_dishes">Популярные блюда</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="text_hi_menu">Привет</string>
    <string name="verification_header">Подтверждение почты</string>
    <string name="verification_text">Для подтверждения своего email перейдите по ссылке в электронном письме</string>
    <string name="email_app">Перейти к письму</string>
    <string name="remember">Запомнить меня</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>