<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/snackLayout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="265dp"
                android:layout_height="217dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-65dp"
                android:layout_marginEnd="251dp"
                android:rotation="2"
                android:src="@drawable/preview2" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="97dp"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/muller_bold"
                android:text="@string/text_hello"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/sfns_display_bold"
                android:text="@string/text_login_title"
                android:textColor="@color/text_grey"
                android:textSize="19sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/email_selected_drawable"
                android:drawablePadding="12dp"
                android:ems="20"
                android:textColor="@color/button_color"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password_selected_drawable"
                android:drawablePadding="12dp"
                android:ems="20"
                android:hint="@string/password"
                android:textColor="@color/button_color"
                android:inputType="textPassword"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="270dp"
                android:elevation="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/text_login"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="65dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/no_account"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="160dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/create"
                android:textColor="@color/button_color"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="230dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/logo" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="274dp"
                android:layout_height="227dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="234dp"
                android:layout_marginTop="-49dp"
                android:layout_marginEnd="-97dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/preview" />

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>