<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    android:background="@color/background_color"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_marginStart="41dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="77dp"
                android:fontFamily="@font/muller_bold"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="328dp"
            android:layout_marginBottom="0dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="40dp"
                android:elevation="7dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/person_selected_drawable"
                android:drawablePadding="12dp"
                android:ems="20"
                android:hint="@string/nickname"
                android:inputType="text"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/email_selected_drawable"
                android:drawablePadding="12dp"
                android:ems="20"
                android:elevation="7dp"
                android:hint="@string/text_email"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password_selected_drawable"
                android:drawablePadding="12dp"
                android:ems="20"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:elevation="7dp"
                android:inputType="textPassword"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password_selected_drawable"
                android:drawablePadding="12dp"
                android:ems="20"
                android:elevation="7dp"
                android:textColor="@color/white"
                android:hint="@string/password_repeat"
                android:inputType="textPassword"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regButton"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="39dp"
                android:layout_marginEnd="39dp"
                android:background="@drawable/button_background"
                android:elevation="125dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/text_registration"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/snackLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="52dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="153dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/text_login"
                android:textColor="@color/button_color"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="230dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/logo" />-->

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="274dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-14dp"
                android:layout_marginEnd="-130dp"
                android:layout_marginBottom="0dp"
                android:rotation="20"
                android:src="@drawable/preview3" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:indeterminate="true"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:indeterminateTint="@color/button_color"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>