<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/snackLayout3"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="265dp"
                android:layout_height="317dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="180dp"
                android:src="@drawable/preview2" />
        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/muller_bold"
                android:text="@string/verification_header"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sfns_display_bold"
                android:text="@string/verification_text"
                android:textColor="@color/text_grey"
                android:textSize="19sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/transitionButton"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="39dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="39dp"
                android:background="@drawable/button_background"
                android:elevation="125dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/email_app"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="52dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="153dp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/muller_bold"
                android:gravity="center"
                android:text="@string/text_login"
                android:textAllCaps="true"
                android:textColor="@color/button_color"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="230dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/logo" /> -->
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="204dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="-100dp"
                android:layout_marginBottom="0dp"
                android:rotation="90"
                android:src="@drawable/preview" />

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>